--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,16 @@
 	],
 	"license": "MIT",
 	"private": true,
+	"directory": "app/lib/",
 	"ignore": [
 		"**/.*",
 		"node_modules",
 		"bower_components",
 		"test",
 		"tests"
-	]
+	],
+	"dependencies": {
+		"angular": "~1.2.25",
+		"angular-ui-router": "~0.2.11"
+	}
 }
